# amd-epp-tool

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml
src/: main.rs  model.rs  monitor.rs  sysfs.rs
